# hivemind

./: .env.example  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  debug_users.go  hivemind.toml  mkdocs.yml  prd.md  pyproject.toml  requirements-docs.txt
.github/: FUNDING.yml
.github/workflows/: docs-deploy.yml  docs.yml  infra.yml  publish-plugin.yml  pypi-publish.yml  registry-api.yml  registry-deploy.yml  registry-web.yml  release-on-tag.yml  worker-release.yml
benchmarks/: __init__.py  bench_dataset_analysis.py  bench_repository_analysis.py  bench_research_pipeline.py
docs/: README.md  architecture.md  cli.md  configuration.md  development.md  distributed.md  examples.md  faq.md  index.md  introduction.md  memory_system.md  providers.md  release_checklist.md  swarm_runtime.md  testing_v2_router_and_mcp.md  tools.md  tui.md
docs/migration/: v2.md
examples/: _common.py  _config.py  demo_swarm.py
examples/coding/: analyze_repository.py  generate_docs.py  refactor_candidates.py
examples/data_science/: dataset_analysis.py  run_experiments.py
examples/distributed/: README.md  controller.toml  parallel_survey.py  run_controller.py  run_demo.sh  run_worker.py  worker.toml
examples/documents/: analyze_documents.py
examples/experiments/: monte_carlo_demo.py  parameter_sweep.py
examples/research/: literature_review.py  research_gap_analysis.py  research_graph.py
hivemind/: __init__.py  cli.py  config.py
hivemind/agents/: agent.py  critic.py  message_bus.py  roles.py  run_agent.py
hivemind/analytics/: __init__.py  tool_analytics.py
hivemind/audit/: __init__.py  logger.py
hivemind/bus/: __init__.py  message.py  schema_version.py  topics.py
hivemind/cache/: __init__.py  embedding_index.py  hashing.py  store.py  task_cache.py
hivemind/cli/: __init__.py  github_oauth.py  init.py  main.py  run_progress.py
hivemind/cluster/: __init__.py  election.py  local.py  node_info.py  registry.py  router.py  state_backend.py
hivemind/compliance/: __init__.py  pii.py
hivemind/config/: __init__.py  config_loader.py  defaults.py  resolver.py  schema.py
hivemind/credentials/: __init__.py  cli.py  migration.py  store.py
hivemind/dashboard/: __init__.py  dashboard.py
hivemind/dev/: __init__.py  builder.py  debugger.py  repo_index.py  sandbox.py  scaffold.py
hivemind/embeddings/: __init__.py  service.py
hivemind/explainability/: __init__.py  decision_tree.py  rationale.py  simulation.py
hivemind/hitl/: __init__.py  approval.py  escalation.py
hivemind/intelligence/: __init__.py  adaptation.py  (+4 more)
registry/: .env.example  .env.prod.example  DEPLOY.md  README.docker.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  justfile
registry/test-plugin/: README.md  pyproject.toml
registry/test-plugin/hivemind_plugin_demo/: __init__.py
scripts/: README.md  seed_tool_scores.py  test_tool_scoring_cli.sh  test_tool_scoring_full.sh  test_tool_scoring_smoke.py  test_v2_router.py
tests/: test_agent.py  test_analysis.py  test_analytics.py  test_auto_model.py  test_config_loader.py  test_credentials.py  test_cross_boundary_serialization.py  test_dag_export.py  test_dev_agents.py  test_dev_build_cmd.py  test_dev_debugger.py  test_dev_repo_index.py  test_dev_sandbox.py  test_dev_scaffold.py  test_embeddings_service.py  test_event_logger.py  test_executor.py  test_github_provider.py  test_init.py  test_knowledge_graph.py  test_knowledge_query.py  test_map_reduce.py  test_memory_evolution.py  test_model_router.py  test_planner.py  test_plugins.py  test_protocols.py  test_reg.py  test_router.py  test_scheduler.py  test_speculation.py  test_strategies.py  test_swarm.py  test_task_cache.py  test_tool_scoring.py  test_tool_selector.py  test_upgrade.py  test_v110.py  test_v16.py  test_v17.py  (+3 more)
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  versions.json
worker/: .dockerignore  Cargo.toml  Dockerfile  README.md
worker/src/: bus.rs  claim.rs  config.rs  controller.rs  election.rs  error.rs  executor.rs  health.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  reconnect.rs  registry.rs  router.rs  rpc.rs  scheduler.rs  snapshot.rs  worker_node.rs
worker/src/types/: agent.rs  event.rs  mod.rs  node.rs  task.rs
worker/tests/: integration.rs
(+591 files in other folders)
