[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hivemind"]

[project]
name = "hivemind-ai"
version = "1.9.0"
description = "Orchestrate distributed swarms of AI agents that collaboratively solve complex tasks."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
keywords = ["ai", "agents", "swarm", "llm", "orchestration", "multi-agent", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "keyring>=24.0",
    "shtab>=1.6.0",
    "httpx>=0.27.0",
    "textual>=0.50.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[project.scripts]
hivemind = "hivemind.cli:main"

[project.optional-dependencies]
data = ["pandas>=2.0.0", "scikit-learn>=1.3.0"]
document = ["docproc>=2.0.0", "python-docx>=1.0.0"]
research = ["duckduckgo-search>=6.0.0"]
embeddings = ["sentence-transformers>=3.0.0"]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.5.0",
    "mike>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
