[package]
name = "hivemind-worker"
version = "1.10.0"
edition = "2021"
rust-version = "1.78"
description = "Rust worker node for hivemind distributed AI swarm runtime"
license = "GPL-3.0-or-later"
repository = "https://github.com/rithulkamesh/hivemind"
readme = "README.md"

[[bin]]
name = "hivemind-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws", "json", "macros", "form"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
sha2 = "0.10"
dashmap = "5"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
hostname = "0.3"
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }

[features]
default = ["subprocess-executor"]
subprocess-executor = []
pyo3-executor = ["pyo3"]

[dev-dependencies]
tokio-test = "0.4"
